--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.29.3"
   }
 }
