--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.29.3"
   }
 }
