--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "type": "module",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1338.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
