--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.29.3",
+    "socket.io": "^4.6.1"
   }
 }
